<resources>
    <string name="app_name">dndCharacterGen</string>
    <string name="headerText">DnD Character Generator</string>
    <string name="charNameText">Character name</string>
    <string name="enterCharName">enter name</string>
    <string name="baseStatsText">Base stats:</string>
    <string name="strText">Strength</string>
    <string name="dexText">Dexterity</string>
    <string name="conText">Constitution</string>
    <string name="intText">Intelligence</string>
    <string name="wisText">Wisdom</string>
    <string name="chaText">Charisma</string>
    <string name="defaultStatValue">10</string>
    <string name="defaultStatMod">+0</string>
    <string name="randomize">randomize</string>
    <string name="channel_name">dndNotif</string>
    <string name="channel_description">dnd notif channel or smth</string>
    <string name="raceText">Race</string>
    <string name="classText">Class</string>
    <string name="alignmentText">Alignment</string>
    <string name="acText">AC</string>
    <string name="initText">Initiative</string>
    <string name="featsText">Feats</string>
    <string name="skillsText">Skills</string>
    <string name="spellsText">Spells</string>
    <string name="spellsKnownText">Spells known</string>
    <string name="spellsPreppedText">Default spells prepared</string>
    <string name="saveSelectedSpellsText">save selected spells</string>
    <string name="saveSpellsText">save spells</string>
    <string name="title_activity_skills_page">skillsPage</string>
    <string name="action_settings">Settings</string>
    <string name="levelText">Level</string>
    <string name="defaultLevelValue">1</string>
    <string name="unusedRanksText">Unused skill ranks</string>
    <string name="saveFeatsText">save feats</string>
    <string name="saveCharacterText">save character</string>
    <string name="sendCharacterText">send character</string>
    <string name="tapToSendText">Tap a character to send</string>
    <string name="level0Text">Level 0</string>
    <string name="level1Text">Level 1</string>
</resources>
