<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/headerText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/charNameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/charNameText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/charNameEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/enterCharName"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@+id/charNameText"
                app:layout_constraintStart_toEndOf="@+id/charNameText" />

            <TextView
                android:id="@+id/baseStatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/baseStatsText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/charNameText" />

            <TextView
                android:id="@+id/strText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/red"
                android:text="@string/strText"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/baseStatsText" />

            <TextView
                android:id="@+id/strVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/defaultStatValue"
                app:layout_constraintBaseline_toBaselineOf="@+id/strText"
                app:layout_constraintStart_toEndOf="@+id/conText" />

            <TextView
                android:id="@+id/dexText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/red_solid"
                android:text="@string/dexText"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/strText" />

            <TextView
                android:id="@+id/dexVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/defaultStatValue"
                app:layout_constraintBaseline_toBaselineOf="@+id/dexText"
                app:layout_constraintStart_toEndOf="@+id/conText" />

            <TextView
                android:id="@+id/conText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_notification_overlay_2"
                android:text="@string/conText"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dexText" />

            <TextView
                android:id="@+id/conVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/defaultStatValue"
                app:layout_constraintBaseline_toBaselineOf="@+id/conText"
                app:layout_constraintStart_toEndOf="@+id/conText" />

            <TextView
                android:id="@+id/strMod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/defaultStatMod"
                app:layout_constraintBaseline_toBaselineOf="@+id/strVal"
                app:layout_constraintStart_toEndOf="@+id/strVal" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/defaultStatMod"
                app:layout_constraintBaseline_toBaselineOf="@+id/dexVal"
                app:layout_constraintStart_toEndOf="@+id/dexVal" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/defaultStatMod"
                app:layout_constraintBaseline_toBaselineOf="@+id/conVal"
                app:layout_constraintStart_toEndOf="@+id/conVal" />

            <TextView
                android:id="@+id/intText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_notification_overlay_2"
                android:text="@string/intText"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/conText" />

            <TextView
                android:id="@+id/wisText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_notification_overlay_2"
                android:text="@string/wisText"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/intText" />

            <TextView
                android:id="@+id/chaText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_notification_overlay_2"
                android:text="@string/chaText"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wisText" />

            <TextView
                android:id="@+id/intVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/defaultStatValue"
                app:layout_constraintBaseline_toBaselineOf="@+id/intText"
                app:layout_constraintStart_toEndOf="@+id/conText" />

            <TextView
                android:id="@+id/wisVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/defaultStatValue"
                app:layout_constraintBaseline_toBaselineOf="@+id/wisText"
                app:layout_constraintStart_toEndOf="@+id/conText" />

            <TextView
                android:id="@+id/chaVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/defaultStatValue"
                app:layout_constraintBaseline_toBaselineOf="@+id/chaText"
                app:layout_constraintStart_toEndOf="@+id/conText" />

            <TextView
                android:id="@+id/intMod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/defaultStatMod"
                app:layout_constraintBaseline_toBaselineOf="@+id/intVal"
                app:layout_constraintStart_toEndOf="@+id/intVal" />

            <TextView
                android:id="@+id/wisMod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/defaultStatMod"
                app:layout_constraintBaseline_toBaselineOf="@+id/wisVal"
                app:layout_constraintStart_toEndOf="@+id/wisVal" />

            <TextView
                android:id="@+id/chaMod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/defaultStatMod"
                app:layout_constraintBaseline_toBaselineOf="@+id/chaVal"
                app:layout_constraintStart_toEndOf="@+id/chaVal" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:text="@string/randomize"
                app:layout_constraintBaseline_toBaselineOf="@+id/baseStatsText"
                app:layout_constraintStart_toEndOf="@+id/baseStatsText" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
